--- a/styles/style.css
+++ b/styles/style.css
@@ -5,8 +5,9 @@
   --Medium-Grey: hsl(216, 12%, 54%);
   --Dark-Blue: hsl(213, 19%, 18%);
   --Very-Dark-Blue: hsl(216, 12%, 8%);
+  --font: "Overpass", sans-serif;
 }
-*{
+* {
   box-sizing: border-box;
 }
 
@@ -15,18 +16,30 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  /* gap: 100px; */
   /* align-self: center; */
   align-content: center;
   height: 100vh;
+  font-family: var(--font);
 }
 
 .main {
-  background-color: var(--Dark-Blue);
-  width: 20vw;
+  background-color: #252E37;
+  width: 25vw;
+  height: 60vh;
   margin: 0 auto;
+  padding: 2rem;
+  border-radius: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.header {
+  color: var(--White);
 }
 .text {
-  color: var(--White);
+  font-size: 15px;
+  color: var(--Light-Grey);
 }
 .rates {
   display: flex;
@@ -34,6 +47,35 @@ body {
   align-items: center;
 }
 .rates > div {
+  font-family: var(--font);
   border-radius: 50%;
-  background-color: var(--Medium-Grey);
+  width: 40px;
+  height: 40px;
+  background-color:#252E37;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--Medium-Grey);
+  box-shadow: 1px 1px 1px 1px black;
+  
+}
+.image {
+  background-color: #252E37;
+  border-radius: 100%;
+  box-shadow: 1px 1px var(--Very-Dark-Blue);
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  padding: 1px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.submit{
+  background-color: var(--Orange);
+  padding: 10px 3px;
+  border: none;
+  border-radius:50px ;
+  color: VAR(--White);
 }
