--- a/styles/style.css
+++ b/styles/style.css
@@ -67,8 +67,8 @@ body {
   background-color: #252E37;
   border-radius: 100%;
   box-shadow: 1px 1px var(--Very-Dark-Blue);
-  width: 10%;
-  height: 10%;
+  width: 40px;
+  height: 40px;
   text-align: center;
   padding: 10px;
   display: flex;
